--- a/styles/PhotoHome.module.css
+++ b/styles/PhotoHome.module.css
@@ -117,7 +117,7 @@
     width: 100%;
     height: 100%;
     /* bottom: 0; */
-    overflow: scroll;
+    overflow-y: scroll;
     box-sizing: border-box;
   }
   .mobileModal h3 {
@@ -160,7 +160,8 @@
 /* HIDE SCROLLBAR FOR CHROME & FIREFOX */
 
 .galleryContainer::-webkit-scrollbar,
-.titleContainer::-webkit-scrollbar {
+.titleContainer::-webkit-scrollbar,
+.mobileModal::-webkit-scrollbar {
   display: none;
 }
 
